* update deps * work on fixing approve / unlock continue button not showing up * add CountUp

--- a/assets/styles/pool.css
+++ b/assets/styles/pool.css
@@ -470,3 +470,7 @@ input[type="text"] {
 .confettiCanvas.active {
   opacity: 1;
 }
+
+.bn-onboard-clickable {
+  border: 0; 
+}
